--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
 </head>
 <body>
     <header class="container">
@@ -20,15 +21,15 @@
         <div class="row">
             <div class="six columns">
                 <h4 id="break-label">Break Length</h4>
-                <button id="break-increment" type="button"></button>
+                <button id="break-increment" type="button" class="fas fa-arrow-circle-up fa-2x"></button>
                 <span id="id-length">5</span>
-                <button id="break-decrement" type="button"></button>
+                <button id="break-decrement" type="button" class="fas fa-arrow-circle-down fa-2x"></button>
             </div>
             <div class="six columns">
                 <h4 id="session-label">Session Length</h4>
-                <button id="session-increment" type="button"></button>
+                <button id="session-increment" type="button" class="fas fa-arrow-circle-up fa-2x"></button>
                 <span id="session-length">25</span>
-                <button id="session-decrement" type="button"></button>
+                <button id="session-decrement" type="button" class="fas fa-arrow-circle-down fa-2x"></button>
             </div>
         </div>
         <div class="row">
