feat: adjust font sizes, margins, padding, and colors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="six columns">
                 <h4 id="break-label">Break Length</h4>
                 <button id="break-increment" type="button" class="fas fa-arrow-circle-up fa-2x"></button>
-                <span id="id-length">5</span>
+                <span id="break-length">5</span>
                 <button id="break-decrement" type="button" class="fas fa-arrow-circle-down fa-2x"></button>
             </div>
             <div class="six columns">
