feat: icons for start_stop and reset buttons

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
         <div class="row">
             <div id="button-container" class="six columns offset-by-three">
-                <button id="start_stop" type="button"></button>
-                <button id="reset" type="button"></button>
+                <button id="start_stop" type="button" class="fas fa-play fa-3x"><i class="fas fa-pause"></i></button>
+                <button id="reset" type="button" class="fas fa-sync-alt fa-3x"></button>
             </div>
         </div>
     </main>
