feat: play alarm sound when time is up

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <button id="reset" type="button" class="fas fa-sync-alt fa-3x"></button>
             </div>
         </div>
+        <audio id="beep" preload="auto" src="http://www.peter-weinberg.com/files/1014/8073/6015/BeepSound.wav"></audio>
     </main>
 
     <script src="/app.js"></script>
