--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 </head>
 <body>
     <header class="container">
+        <nav class="row">
+            <div class="three columns offset-by-nine">
+                <select class="u-full-width" id="chooseMood">
+                <option value="opt-default" selected>Set the mood!</option>
+                <option value="opt-creative">Creative</option>
+                <option value="opt-happiness">Happiness</option>
+                <option value="opt-passion">Passion</option>
+                <option value="opt-fancy">Fancy</option>
+                <option value="opt-calm">Calm</option>
+                <option value="opt-energy">Energy</option>
+                <option value="opt-stability">Stability</option>
+                </select>
+            </div>
+        </nav>
         <div class="row">
             <h1 class="twelve columns">Pomodoro Clock</h1>
         </div>
