fix: js file not linked correctly

--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
         <audio id="beep" preload="auto" src="http://www.peter-weinberg.com/files/1014/8073/6015/BeepSound.wav"></audio>
     </main>
 
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
