--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         <audio id="beep" preload="auto" src="http://www.peter-weinberg.com/files/1014/8073/6015/BeepSound.wav"></audio>
     </main>
 
+    <footer class="four columns offset-by-eight">
+        Made by <a id="footer" href="https://www.cbstanley.tech" target="_blank">Christopher Stanley</a> &copy; 2019
+    </footer>
+
     <script src="app.js"></script>
 </body>
 </html>
